src/test/deca/codegen/invalid/assign-var-non-ini.deca
// Description:
//    Assignation à un champ d'une variable non initialisée.
//
// Résultats:
//    Erreur d'exécution: variable non initialisée.

class A {
    int x;
}

{
    A a;
    a.x = 10;
}